src/test/resources/validation/error/implicitJoinFailure/schema.graphqls
type Query {
  studenter(
    eierInstitusjonsnummer: String! @column(name: "INSTITUSJONSNR_EIER"),
    first: Int = 100,
    after: String
  ): StudentVedInstitusjon
}

type StudentVedInstitusjon @table(name: "STUDENT") {
  id: ID!
  studentVedInstitusjonId: ID!
  studentkort: [Studentkort!] @splitQuery # Should be ok, exists key join between STUDENT and STUDENTKORT.
  studentkort2: [Studentkort2!] @splitQuery # Should fail, no join can be deduced between STUDENT and KULL.
}

type Studentkort @table(name: "STUDENTKORT") {
  id: ID!
  studentkortnummer: String! @column(name: "STUDENTKORTNR")
}

type Studentkort2 @table(name: "KULL") {
  id: ID!
  studentkortnummer: String! @column(name: "STUDENTKORTNR")
}
